--- a/forSearch/src/main/resources/application.properties
+++ b/forSearch/src/main/resources/application.properties
@@ -1,15 +1,17 @@
+server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.main.allow-circular-references=true
-spring.jackson.date-format=yyyy-MM-dd HH:mm
-spring.jackson.serialization.fail-on-empty-beans=false
-spring.sql.init.mode=always
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/forpractice
 spring.datasource.username=postgres
 spring.datasource.password=IUT-2020
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.main.allow-circular-references=true
+spring.jackson.date-format=yyyy-MM-dd HH:mm
+#spring.jackson.serialization.fail-on-empty-beans=false
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
