--- a/forSearch/src/main/resources/application.properties
+++ b/forSearch/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/forpractice
 spring.datasource.username=postgres
 spring.datasource.password=IUT-2020
 
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-circular-references=true
 spring.jackson.date-format=yyyy-MM-dd HH:mm
