--- a/forSearch/pom.xml
+++ b/forSearch/pom.xml
@@ -61,10 +61,10 @@
             <scope>compile</scope>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.data</groupId>-->
-        <!--            <artifactId>spring-data-elasticsearch</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+        </dependency>
 
         <!--        <dependency>-->
         <!--            <groupId>org.hibernate.search</groupId>-->
