classes are updated

--- a/forSearch/src/main/resources/application.properties
+++ b/forSearch/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm
 spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
+
+spring.main.allow-bean-definition-overriding=true
