--- a/forAttachment/src/main/resources/application.properties
+++ b/forAttachment/src/main/resources/application.properties
@@ -12,7 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.max-file-size=100MB
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=jabborovegamberdi2002@gmail.com
@@ -21,3 +20,6 @@ spring.mail.properties.mail.smtp.ssl=yes
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.setTLC=true
+
+#logging.level.com.example=TRACE
+#logging.level.root=TRACE
