--- a/forLanguage/src/main/resources/application.properties
+++ b/forLanguage/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/forpractice
 spring.datasource.username=postgres
 spring.datasource.password=IUT-2020
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.properties.format_sql=true
+
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
