--- a/forMailSender/src/main/resources/application.properties
+++ b/forMailSender/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/forpractice
 spring.datasource.username=postgres
 spring.datasource.password=IUT-2020
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
