--- a/forLanguage/src/main/resources/application.properties
+++ b/forLanguage/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/forpractice
+spring.datasource.url=jdbc:postgresql://localhost:5432/forpractise
 spring.datasource.username=postgres
 spring.datasource.password=IUT-2020
 
